--- a/homestyle.css
+++ b/homestyle.css
@@ -16,7 +16,7 @@
 
 
 
-* { margin:0; padding:0; box-sizing:border-box; font-family: 'Poppins', sans-serif; }
+ { margin:0; padding:0; box-sizing:border-box; font-family: 'Poppins', sans-serif; }
 
 
 
@@ -32,7 +32,7 @@ body {
 
 
 
-/* --- NAVIGATION --- */
+
 
 .nav-right-group {
 
@@ -42,7 +42,7 @@ body {
 
     gap: 20px;
 
-    margin-left: auto; /* Ini akan menolak seluruh group ke kanan */
+    margin-left: auto; 
 
 }
 
@@ -150,7 +150,7 @@ nav { display: flex; justify-content: space-between; align-items: center; paddin
 
 
 
-/* NAV PROFILE */
+
 
 .nav-profile-box { display: flex; align-items: center; gap: 10px; cursor: pointer; }
 
@@ -158,7 +158,7 @@ nav { display: flex; justify-content: space-between; align-items: center; paddin
 
 
 
-/* --- SIDEBAR --- */
+
 
 #main-sidebar { display: none; flex-direction: column; position: fixed; top: 100px; left: 20px; height: calc(100% - 250px); width: 240px; background: rgba(26, 26, 27, 0.85); backdrop-filter: blur(15px); border-radius: 20px; padding: 25px; border: 1px solid var(--primary-pink); z-index: 900; }
 
@@ -170,7 +170,7 @@ nav { display: flex; justify-content: space-between; align-items: center; paddin
 
 
 
-/* --- CONTENT AREA --- */
+
 
 #main-content-area { transition: 0.4s; padding: 60px 10%; text-align: center; }
 
@@ -184,7 +184,7 @@ nav { display: flex; justify-content: space-between; align-items: center; paddin
 
 
 
-/* --- MODALS --- */
+
 
 .overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); backdrop-filter: blur(10px); display: none; justify-content: center; align-items: center; z-index: 2000; }
 
@@ -196,7 +196,7 @@ nav { display: flex; justify-content: space-between; align-items: center; paddin
 
 
 
-/* --- PLAYER BAR & TIMELINE --- */
+
 
 .player-bar { 
 
@@ -228,7 +228,7 @@ nav { display: flex; justify-content: space-between; align-items: center; paddin
 
 
 
-/* --- ELEMENTS --- */
+
 
 .song-item { display: flex; justify-content: space-between; align-items: center; padding: 12px; background: rgba(255,255,255,0.03); border-radius: 12px; margin-bottom: 8px; }
 
@@ -242,7 +242,7 @@ nav { display: flex; justify-content: space-between; align-items: center; paddin
 
 
 
-/* --- FOOTER (FIXED) --- */
+
 
 footer { 
 
@@ -252,7 +252,7 @@ footer {
 
     color: white; 
 
-    padding: 20px 10% 20px; /* Padding bawah dikekalkan supaya tak kena tutup dengan player */
+    padding: 20px 10% 20px; 
 
     text-align: center; 
 
@@ -275,5 +275,6 @@ footer {
     margin: 0 auto; 
 
     line-height: 1.4; 
+
 
 }
